# oponn

./: .djlintrc  .dockerignore  .env  .env.development  .env.staging  .env.testing  .gitignore  .pre-commit-config.yaml  Critique.md  Dockerfile.test  GEMINI.md  Makefile  README.md  REVIEW.md  TODO.md  dev.py  docker-compose.yml  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0b29e62ea43e_add_kms_key_id_to_ballots.py  5e10cbf603d7_initial_schema.py  a56fca33e4c6_initial_schema_v2_users_and_nanoid.py  e81b37ed6599_add_encryption_and_id_voting.py
docs/: async_root_cause_analysis.md  encryption_post_mortem.md  encryption_strategy.md  environment_config_plan.md  gemini_patterns.md  logging.md
epic/: USERS.md
epics/: architectural_refactoring.md  kms_integration.md  privacy.md
pocs/: poc_cryptography.py  poc_tink.py
src/: config.py  database.py  dependencies.py  logging_conf.py  main.py
src/models/: ballot_models.py  exceptions.py  user_models.py
src/repositories/: ballot_repository.py  models.py  sql_ballot_repository.py  sql_repository.py  sql_user_repository.py  user_repository.py
src/routes/: auth.py  sse.py  ui.py
src/services/: auth_service.py  ballot_service.py  crypto_service.py  kms_provider.py
static/css/: style.css
static/js/: app.js
templates/: create.html  index.html  layout.html  login.html  results.html  vote.html
templates/partials/: create_form.html  start-time-input.html  start_time_input.html  vote_form.html  vote_results.html
tests/: conftest.py  reproduce_bug.py  test_auth.py  test_ballot.py  test_concurrency.py  test_e2e.py  test_local_kms.py  test_sql_repo.py  test_sse.py  test_sse_logic.py  test_ui_routes.py  test_units.py  test_validation.py
tools/: generate_keyset.py  generate_migration.py  simulate_votes.py
