[project]
name = "oponn"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank Wilkerson"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard] (>=0.128.0,<0.129.0)", "uvicorn (>=0.40.0,<0.41.0)", "sse-starlette (>=3.2.0,<4.0.0)", "beautifulsoup4 (>=4.14.3,<5.0.0)", "itsdangerous (>=2.2.0,<3.0.0)"]


[build-system]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "basedpyright (>=1.37.1,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
timeout = 10

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]
