[project]
name = "oponn"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank Wilkerson"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sse-starlette (>=3.2.0,<4.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "gunicorn (>=24.1.1,<25.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "fastapi-sso (>=0.17.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "tink (>=1.10.0,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
]

[tool.poetry.scripts]
oponn = "manage:app"

[build-system]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "basedpyright (>=1.37.1,<2.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
    "testcontainers[postgres] (>=4.14.0,<5.0.0)",
    "djlint (>=1.36.4,<2.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
src = ["src"]
